--- a/preferences.html
+++ b/preferences.html
@@ -2,10 +2,20 @@
 
 <html>
   <head>
+  <link rel="stylesheet" type="text/css" href="final3.css">
     <title>Bay Area Bites</title>
   </head>
   <body>
-    <p>HI</p>
+  <div class="top">
+    <p class="title">Select Your Preferences</p>
+  </div>
+  <div class="bottom">
+    <button>Palo Alto</button>
+    <button>Mountain View</button>
+    <button>Fremont</button>
+    <button>Sunnyvale</button>
+    <button>Cupertino</button>
+  </div>
   </body>
 
 </html>
