--- a/preferences.html
+++ b/preferences.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-  <link rel="stylesheet" type="text/css" href="final3.css">
+  <link rel="stylesheet" type="text/css" href="preferences.css">
     <title>Bay Area Bites</title>
   </head>
   <body>
