--- a/preferences.html
+++ b/preferences.html
@@ -9,13 +9,38 @@
   <div class="top">
     <p class="title">Select Your Preferences</p>
   </div>
-  <div class="bottom">
+  <div class="columns">
+    <p>Locations:</p>
     <button>Palo Alto</button>
     <button>Mountain View</button>
     <button>Fremont</button>
     <button>Sunnyvale</button>
     <button>Cupertino</button>
   </div>
+  <div class="columns">
+    <p>Meal:</p>
+    <button>Breakfast</button>
+    <button>Lunch</button>
+    <button>Dinner</button>
+    <button>Snack</button>
+  </div>
+  <div class="columns">
+    <p>Mood:</p>
+    <button>Happy</button>
+    <button>Sad</button>
+    <button>Motivated</button>
+    <button>Stressed</button>
+    <button>Hangry</button>
+    <button>Bored/Curious</button>
+  </div>
+  <div class="columns" id="prices">
+    <p>Expenses:</p>
+    <button>Inexpensive ($)</button>
+    <button>Moderate ($$)</button>
+    <button>Expensive ($$$)</button>
+  </div>
   </body>
-
+  <div class="bottom">
+    <button>Get My Restaurant Recommendations!</button>
+  </div>
 </html>
