--- a/preferences.html
+++ b/preferences.html
@@ -41,7 +41,7 @@
   </div>
   </body>
   <div class="bottom">
-    <button id="submit">Get My Restaurant Recommendations!</button>
+    <button id="submit"><a href="results.html">Get My Restaurant Recommendations!</button>
   </div>
   <script src="preferences.js"></script>
 </html>
