--- a/preferences.html
+++ b/preferences.html
@@ -3,6 +3,7 @@
 <html>
   <head>
   <link rel="stylesheet" type="text/css" href="preferences.css">
+  <script src="jquery.js"></script> 
     <title>Bay Area Bites</title>
   </head>
   <body>
@@ -11,33 +12,33 @@
   </div>
   <div class="columns" id="locations">
     <p>Locations:</p>
-    <button onclick="showMeal()">Palo Alto</button>
-    <button onclick="showMeal()">Mountain View</button>
-    <button onclick="showMeal()">Fremont</button>
-    <button onclick="showMeal()">Sunnyvale</button>
-    <button onclick="showMeal()">Cupertino</button>
+    <button onclick="jQuery(this).toggleClass('active').showMeal()">Palo Alto</button>
+    <button onclick="jQuery(this).toggleClass('active').showMeal()">Mountain View</button>
+    <button onclick="jQuery(this).toggleClass('active').showMeal()">Fremont</button>
+    <button onclick="jQuery(this).toggleClass('active').showMeal()">Sunnyvale</button>
+    <button onclick="jQuery(this).toggleClass('active').showMeal()">Cupertino</button>
   </div>
   <div class="columns" id="meal">
     <p>Meal:</p>
-    <button onclick="showMood()">Breakfast</button>
-    <button onclick="showMood()">Lunch</button>
-    <button onclick="showMood()">Dinner</button>
-    <button onclick="showMood()">Snack</button>
+    <button onclick="jQuery(this).toggleClass('active').showMood()">Breakfast</button>
+    <button onclick="jQuery(this).toggleClass('active').showMood()">Lunch</button>
+    <button onclick="jQuery(this).toggleClass('active').showMood()">Dinner</button>
+    <button onclick="jQuery(this).toggleClass('active').showMood()">Snack</button>
   </div>
   <div class="columns" id="mood">
     <p>Mood:</p>
-    <button onclick="showPrices()">Happy</button>
-    <button onclick="showPrices()">Sad</button>
-    <button onclick="showPrices()">Motivated</button>
-    <button onclick="showPrices()">Stressed</button>
-    <button onclick="showPrices()">Hangry</button>
-    <button onclick="showPrices()">Bored/Curious</button>
+    <button onclick="jQuery(this).toggleClass('active').showPrices()">Happy</button>
+    <button onclick="jQuery(this).toggleClass('active').showPrices()">Sad</button>
+    <button onclick="jQuery(this).toggleClass('active').showPrices()">Motivated</button>
+    <button onclick="jQuery(this).toggleClass('active').showPrices()">Stressed</button>
+    <button onclick="jQuery(this).toggleClass('active').showPrices()">Hangry</button>
+    <button onclick="jQuery(this).toggleClass('active').showPrices()">Bored/Curious</button>
   </div>
   <div class="columns" id="prices">
     <p>Expenses:</p>
-    <button onclick="showButton()">Inexpensive ($)</button>
-    <button onclick="showButton()()">Moderate ($$)</button>
-    <button onclick="showButton()()">Expensive ($$$)</button>
+    <button onclick="jQuery(this).toggleClass('active').showButton()">Inexpensive ($)</button>
+    <button onclick="jQuery(this).toggleClass('active').showButton()()">Moderate ($$)</button>
+    <button onclick="jQuery(this).toggleClass('active').showButton()()">Expensive ($$$)</button>
   </div>
   </body>
   <div class="bottom">
