--- a/results.html
+++ b/results.html
@@ -2,9 +2,10 @@
 
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="results.css">
 
   </head>
   <body>
-    <p>HI</p>
+    <p><h1>Here are your results:</h1></p>
   </body>
 </html>
