--- a/preferences.html
+++ b/preferences.html
@@ -42,7 +42,7 @@
   </div>
   </body>
   <div class="bottom">
-    <button id="submit"><a href="results.html">Get My Restaurant Recommendations!</button>
+    <button id="submit" onclick="get()"><a href="results.html">Get My Restaurant Recommendations!</button>
   </div>
   <script src="preferences.js"></script>
 </html>
