--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
   <head>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="welcome.css">
     <title>Bay Area Bites</title>
   </head>
