--- a/results.html
+++ b/results.html
@@ -2,6 +2,8 @@
 
 <html>
   <head>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="results.css">
 
   </head>
