--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 
 <html>
   <head>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="welcome.css">
+    <link rel="stylesheet" type="text/css" href="welcome.css">
+    <link rel="icon" href="favicon.ico">
     <title>Bay Area Bites</title>
   </head>
   <body>
