--- a/preferences.html
+++ b/preferences.html
@@ -2,9 +2,8 @@
 
 <html>
   <head>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="preferences.css">
+    <link rel="stylesheet" type="text/css" href="preferences.css">
+    <link rel="icon" href="favicon.ico">
   <script src="jquery.js"></script>
     <title>Bay Area Bites</title>
   </head>
