--- a/results.html
+++ b/results.html
@@ -2,9 +2,8 @@
 
 <html>
   <head>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="results.css">
+    <link rel="icon" href="favicon.ico">
 
   </head>
   <body>
