--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="welcome.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon (6).ico">
     <title>Bay Area Bites</title>
   </head>
   <body>
