--- a/preferences.html
+++ b/preferences.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="preferences.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon (6).ico">
   <script src="jquery.js"></script>
     <title>Bay Area Bites</title>
   </head>
