--- a/results.html
+++ b/results.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="results.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon (6).ico">
 
   </head>
   <body>
