--- a/results.html
+++ b/results.html
@@ -4,9 +4,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="results.css">
     <link rel="icon" href="favicon (6).ico">
-
+    <title>Results</title>
   </head>
   <body>
     <p><h1>Here are your results:</h1></p>
+    <script src="results.js"></script>
   </body>
 </html>
