--- a/results.html
+++ b/results.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="results.css">
     <link rel="icon" href="favicon (6).ico">
+    <script src="jquery.js"></script>
     <title>Results</title>
   </head>
   <body>
