--- a/preferences.html
+++ b/preferences.html
@@ -9,7 +9,7 @@
   </head>
   <body>
   <div class="top">
-    <p class="title">Select Your Preferences</p>
+    <p class="title">Select Your Preferences<br Please Only Select One Per Section </p>
   </div>
   <div class="middle">
     <p class="paragraph">Please Only Select One Per Section</p>
