--- a/preferences.html
+++ b/preferences.html
@@ -11,6 +11,9 @@
   <div class="top">
     <p class="title">Select Your Preferences<br Please Only Select One Per Section </p>
   </div>
+  <div class="middle">
+    <p class="paragraph">Please Only Select One Per Section</p>
+  </div>
   <div
   <div class="columns" id="locations">
     <p>Locations:</p>
