--- a/preferences.html
+++ b/preferences.html
@@ -15,8 +15,8 @@
     <p class="paragraph">Please Only Select One Per Section</p>
   </div>
   <div
-  <div class="columns" id="locations">
-    <p>Locations:</p>
+  <div class="columns" id="location">
+    <p>Location:</p>
     <button id="paloAlto" onclick="jQuery(this).toggleClass('active');showMeal()">Palo Alto</button>
     <button id="mountainView" onclick="jQuery(this).toggleClass('active');showMeal()">Mountain View</button>
     <button id="fremont" onclick="jQuery(this).toggleClass('active');showMeal()">Fremont</button>
@@ -40,7 +40,7 @@
     <button id="bored" onclick="jQuery(this).toggleClass('active');showPrices()">Bored/Curious</button>
   </div>
   <div class="columns" id="prices">
-    <p>Expenses:</p>
+    <p>Expense:</p>
     <button id="$" onclick="jQuery(this).toggleClass('active');showButton()">Inexpensive ($)</button>
     <button id="$$" onclick="jQuery(this).toggleClass('active');showButton()">Moderate ($$)</button>
     <button id="$$$" onclick="jQuery(this).toggleClass('active');showButton()">Expensive ($$$)</button>
