--- a/results.html
+++ b/results.html
@@ -8,7 +8,8 @@
     <title>Results</title>
   </head>
   <body>
-    <p><h1>Here are your results <br based on what you selected for location, meal, mood, and expense, we have provided a list of a few restaurants that fit into your criteria :</h1></p>
+    <h1>Here are your results </h1>
+    <h3>based on what you selected for location, meal, mood, and expense, <br />we have provided a list of a few restaurants that fit into your criteria :</h3>
     <script src="results.js"></script>
   </body>
 </html>
