--- a/preferences.html
+++ b/preferences.html
@@ -21,7 +21,7 @@
     <button id="mountainView" onclick="jQuery(this).toggleClass('active');showMeal()">Mountain View</button>
     <button id="fremont" onclick="jQuery(this).toggleClass('active');showMeal()">Fremont</button>
     <button id="sunnyvale" onclick="jQuery(this).toggleClass('active');showMeal()">Sunnyvale</button>
-    <button id="cupertion" onclick="jQuery(this).toggleClass('active');showMeal()">Cupertino</button>
+    <button id="cupertino" onclick="jQuery(this).toggleClass('active');showMeal()">Cupertino</button>
   </div>
   <div class="columns" id="meal">
     <p>Meal:</p>
