--- a/results.html
+++ b/results.html
@@ -12,7 +12,7 @@
     <h3>based on what you selected for location, meal, mood, and expense, <br />we have provided a list of a few restaurants that fit into your criteria :</h3>
     <script src="results.js"></script>
     <div class="bottom">
-      <button><a href="preferences.html">Restart</button>
+      <button><a href="preferences.html">restart</button>
     </div>
   </body>
 </html>
