--- a/results.html
+++ b/results.html
@@ -8,8 +8,10 @@
     <title>Results</title>
   </head>
   <body>
-    <h1>Here are your results </h1>
-    <h3>based on what you selected for location, meal, mood, and expense, <br />we have provided a list of a few restaurants that fit into your criteria :</h3>
+    <div class="title">
+      <h1>Here are your results </h1>
+      <h3>based on what you selected for location, meal, mood, and expense, <br />we have provided a list of a few restaurants that fit into your criteria :</h3>
+    </div>
     <script src="results.js"></script>
     <div class="bottom">
       <button><a href="preferences.html">restart</button>
