--- a/preferences.html
+++ b/preferences.html
@@ -17,33 +17,33 @@
   <div
   <div class="columns" id="location" data-toggle="buttons">
     <p>Location:</p>
-    <label class="blue"><radio id="paloAlto"><input type="radio"name="toggle" onclick="jQuery(this).toggleClass('active');showMeal()"><span>Palo Alto</span></label>
-    <label class="blue"><radio id="mountainView"><input type="radio"name="toggle" onclick="jQuery(this).toggleClass('active');showMeal()"><span>MV</span></label>
-    <label class="blue"><radio id="fremont" ><input type="radio" name="toggle" onclick="jQuery(this).toggleClass('active');showMeal()"><span>fremont</span></label>
-    <label class="blue"><radio id="cupertino"><input type="radio" name="toggle" onclick="jQuery(this).toggleClass('active');showMeal()"><span>cupertino</span></label>
-    <label class="blue"><radio id="Sunnyvale"><input type="radio" name="toggle" onclick="jQuery(this).toggleClass('active');showMeal()"><span>Sunnyvale</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle" id="paloAlto" onclick="jQuery(this).toggleClass('active');showMeal()"><span>Palo Alto</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle" id="mountainView" onclick="jQuery(this).toggleClass('active');showMeal()"><span>MV</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle" id="fremont" onclick="jQuery(this).toggleClass('active');showMeal()"><span>fremont</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle" id="cupertino" onclick="jQuery(this).toggleClass('active');showMeal()"><span>cupertino</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle" id="Sunnyvale" onclick="jQuery(this).toggleClass('active');showMeal()"><span>Sunnyvale</span></label>
   </div>
   <div class="columns" id="meal" data-toggle="buttons">
     <p>Meal:</p>
-    <label class="blue"><radio id="breakfast"><input type="radio"name="toggle2" onclick="jQuery(this).toggleClass('active');showMood()"><span>breakfast</span></label>
-    <label class="blue"><radio id="lunch" ><input type="radio" name="toggle2" onclick="jQuery(this).toggleClass('active');showMood()"><span>lunch</span></label>
-    <label class="blue"><radio id="dinner"><input type="radio" name="toggle2" onclick="jQuery(this).toggleClass('active');showMood()"><span>dinner</span></label>
-    <label class="blue"><radio id="snack"><input type="radio" name="toggle2" onclick="jQuery(this).toggleClass('active');showMood()"><span>snack</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle2" id="breakfast" onclick="jQuery(this).toggleClass('active');showMood()"><span>breakfast</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle2" id="lunch" onclick="jQuery(this).toggleClass('active');showMood()"><span>lunch</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle2" id="dinner" onclick="jQuery(this).toggleClass('active');showMood()"><span>dinner</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle2" id="snack" onclick="jQuery(this).toggleClass('active');showMood()"><span>snack</span></label>
   </div>
   <div class="columns" id="mood" data-toggle="buttons">
     <p>Mood:</p>
-    <label class="blue"><radio id="happy" ><input type="radio" name="toggle3" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Happy</span></label>
-    <label class="blue"><radio id="sad"><input type="radio" name="toggle3" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Sad</span></label>
-    <label class="blue"><radio id="motivated"><input type="radio" name="toggle3" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Motivated</span></label>
-    <label class="blue"><radio id="stressed" ><input type="radio" name="toggle3" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Stressed</span></label>
-    <label class="blue"><radio id="hangry"><input type="radio" name="toggle3" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Hangry</span></label>
-    <label class="blue"><radio id="bored"><input type="radio" name="toggle3" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Bored</span></label>
+    <label class="blue"><radio><input type="radio"name="toggle3" id="happy" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Happy</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle3" id="sad" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Sad</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle3" id="motivated" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Motivated</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle3" id="stressed" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Stressed</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle3" id="hangry" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Hangry</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle3" id="bored" onclick="jQuery(this).toggleClass('active');showPrices()"><span>Bored</span></label>
   </div>
   <div class="columns" id="prices" data-toggle="buttons">
     <p>Expense:</p>
-    <label class="blue"><radio id="$"><input type="radio" name="toggle4" onclick="jQuery(this).toggleClass('active');showButton()"><span>Inexpensive ($)</span></label>
-    <label class="blue"><radio id="$$"><input type="radio" name="toggle4" onclick="jQuery(this).toggleClass('active');showButton()"><span>Moderate ($$)</span></label>
-    <label class="blue"><radio id="$$$"><input type="radio" name="toggle4" onclick="jQuery(this).toggleClass('active');showButton()"><span>Expensive ($$$)</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle4" id="$" onclick="jQuery(this).toggleClass('active');showButton()"><span>Inexpensive ($)</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle4" id="$$" onclick="jQuery(this).toggleClass('active');showButton()"><span>Moderate ($$)</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle4" id="$$$" onclick="jQuery(this).toggleClass('active');showButton()"><span>Expensive ($$$)</span></label>
   </div>
   </body>
   <div class="bottom">
