--- a/preferences.html
+++ b/preferences.html
@@ -19,8 +19,8 @@
     <p>Location:</p>
     <label class="blue"><radio><input type="radio" name="toggle" id="paloAlto" onclick="jQuery(this).toggleClass('active');showMeal()"><span>Palo Alto</span></label>
     <label class="blue"><radio><input type="radio" name="toggle" id="mountainView" onclick="jQuery(this).toggleClass('active');showMeal()"><span>MV</span></label>
-    <label class="blue"><radio><input type="radio" name="toggle" id="fremont" onclick="jQuery(this).toggleClass('active');showMeal()"><span>fremont</span></label>
-    <label class="blue"><radio><input type="radio" name="toggle" id="cupertino" onclick="jQuery(this).toggleClass('active');showMeal()"><span>cupertino</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle" id="fremont" onclick="jQuery(this).toggleClass('active');showMeal()"><span>Fremont</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle" id="cupertino" onclick="jQuery(this).toggleClass('active');showMeal()"><span>Cupertino</span></label>
     <label class="blue"><radio><input type="radio" name="toggle" id="Sunnyvale" onclick="jQuery(this).toggleClass('active');showMeal()"><span>Sunnyvale</span></label>
   </div>
   <div class="columns" id="meal" data-toggle="buttons">
