--- a/preferences.html
+++ b/preferences.html
@@ -25,10 +25,10 @@
   </div>
   <div class="columns" id="meal" data-toggle="buttons">
     <p>Meal:</p>
-    <label class="blue"><radio><input type="radio" name="toggle2" id="breakfast" onclick="jQuery(this).toggleClass('active');showMood()"><span>breakfast</span></label>
-    <label class="blue"><radio><input type="radio" name="toggle2" id="lunch" onclick="jQuery(this).toggleClass('active');showMood()"><span>lunch</span></label>
-    <label class="blue"><radio><input type="radio" name="toggle2" id="dinner" onclick="jQuery(this).toggleClass('active');showMood()"><span>dinner</span></label>
-    <label class="blue"><radio><input type="radio" name="toggle2" id="snack" onclick="jQuery(this).toggleClass('active');showMood()"><span>snack</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle2" id="breakfast" onclick="jQuery(this).toggleClass('active');showMood()"><span>Breakfast</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle2" id="lunch" onclick="jQuery(this).toggleClass('active');showMood()"><span>Lunch</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle2" id="dinner" onclick="jQuery(this).toggleClass('active');showMood()"><span>Dinner</span></label>
+    <label class="blue"><radio><input type="radio" name="toggle2" id="snack" onclick="jQuery(this).toggleClass('active');showMood()"><span>Snack</span></label>
   </div>
   <div class="columns" id="mood" data-toggle="buttons">
     <p>Mood:</p>
